--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>회원가입</title>
 </head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link rel='stylesheet' href='/css/member/signUp.css'>
-<style>
-
-
-</style>
 <body>
 <form id='formData'>
     <div id="mainDiv">
@@ -29,15 +27,7 @@
 
                         <div id="image-cropper">
                             <h4>프로필 이미지</h4>
-                            <div class="cropit-preview profile"></div>
                             <input type="file" class="cropit-image-input">
-                            <input id="cropit-range" type="range" class="cropit-image-zoom-input">
-                            <button id="cuttingBtn" type="button" style="display: inline-block;">사진 자르기</button>
-                            <input type="hidden" name="base64Image" id="hidden-image-data" value=""/>
-                            <div class="checkMessages" id="chkImageMsg">
-                                <p></p>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -179,5 +169,7 @@
         <button class="button" id="addBtn" type="button" style="text-align: center;">회원 가입</button>
     </div>
 </form>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="/js/member/memberForm.js"></script>
 </body>
 </html>
