--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -34,7 +34,8 @@
                         <div id="emailDiv" class="emailDiv">
                             <h4>개인 정보 입력</h4>
                             <label id="icon" for="email"><i class="icon-envelope" style="margin-left:-2px;"></i></label>
-                            <input type="email" id='email' name="email" onkeyup="checkEmail()" placeholder="example@email.com" required/>
+                            <input type="email" id='email' name="email" placeholder="example@email.com" required/>
+                            <!--<input type="email" id='email' name="email" onkeyup="checkEmail()" placeholder="example@email.com" required/>-->
                             <div class="checkMessages" id="chkEmailMsg">
                                 <p></p>
                             </div>
@@ -122,7 +123,7 @@
 
                     </div>
                 </div>
-
+<!--
                 <div id="InterestInfoDiv" class="InterestInfoDiv" style="margin-top: 30px; margin-bottom: 30px;">
 
                     <div id="interestAreasDiv">
@@ -138,7 +139,6 @@
                             </div>
 
                         </div>
-
                     </div>
 
 
@@ -159,6 +159,7 @@
                 </div>
 
             </div>
+            -->
             <!-- div two end -->
 
         </div>
