--- a/src/main/resources/static/css/member/signUp.css
+++ b/src/main/resources/static/css/member/signUp.css
@@ -17,47 +17,20 @@ a {
 
 @charset "UTF-8";
 
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-form,
-fieldset,
-input,
-p,
-blockquote,
-th,
-td {
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td {
     padding: 0;
     margin: 0;
 }
 
-fieldset,
-img {
+fieldset,img {
     border: 0
 }
 
-ol,
-ul,
-li {
+ol,ul,li {
     list-style: none
 }
 
-body,
-input,
-textarea,
-select {
+body,input,textarea,select {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     color: #4c4c4c;
@@ -197,10 +170,7 @@ i.icon-male {
 
 
 /* input box 관련 css */
-input[type=text],
-input[type=password],
-input[type=email],
-input[type=date] {
+input[type=text],input[type=password],input[type=email],input[type=date] {
     width: 240px;
     height: 39px;
     -webkit-border-radius: 0px 4px 4px 0px/5px 5px 4px 4px;
@@ -425,7 +395,7 @@ input[type=checkbox]:checked + label:after {
 .mainDiv {
     margin: 20px auto;
     width: 770px;
-    height: 930px;
+    height: 1024px;
     -webkit-border-radius: 8px/7px;
     -moz-border-radius: 8px/7px;
     border-radius: 8px/7px;
