--- a/src/main/resources/templates/admin/member/memberList.html
+++ b/src/main/resources/templates/admin/member/memberList.html
@@ -23,13 +23,12 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-          <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+          <h1 class="h3 mb-2 text-gray-800">회원정보</h1>
 
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+              <h6 class="m-0 font-weight-bold text-primary">회원정보</h6>
             </div>
             <div class="card-body">
               <div class="table-responsive">
@@ -132,8 +131,11 @@
   <script src="/js/lib/bootstrap-template/vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="/js/lib/bootstrap-template/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-  <!-- Page level custom scripts -->
-  <!--<script src="js/demo/datatables-demo.js"></script>-->
+  <script>
+    $(document).ready(function() {
+      $('#dataTable').DataTable();
+    });
+  </script>
 
 </body>
 
