--- a/src/main/resources/templates/fragments/adminSidebar.html
+++ b/src/main/resources/templates/fragments/adminSidebar.html
@@ -4,7 +4,7 @@
 <ul th:fragment="adminSidebar" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="admin">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
         <div class="sidebar-brand-text mx-3">BuskingBusking</div>
     </a>
 
@@ -13,7 +13,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="admin">
+        <a class="nav-link" href="/admin">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>메인 페이지</span></a>
     </li>
