--- a/src/main/resources/static/css/member/signUp.css
+++ b/src/main/resources/static/css/member/signUp.css
@@ -143,7 +143,7 @@ input[type=radio]:checked + label:after {
 
 
 /*  아이콘 관련 */
-label#icon {
+label.icon {
     width: 28px;
 }
 
@@ -151,7 +151,7 @@ i.icon-male {
     margin-left: 2px;
 }
 
-#icon {
+.icon {
     display: inline-block;
     width: 30px;
     height: 23px;
