--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -8,7 +8,8 @@
 <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link rel='stylesheet' href='/css/member/signUp.css'>
 <body>
-<form id='formData'>
+<form id='formData' action="/member/saveMember" method="post">
+
     <div id="mainDiv" class="mainDiv">
         <div class="title">
             <span id="registration" class="registration">Registration</span>
@@ -33,7 +34,7 @@
                     <div class="PersonalPositioning">
                         <div id="emailDiv" class="emailDiv">
                             <h4>개인 정보 입력</h4>
-                            <label id="icon" for="email"><i class="icon-envelope" style="margin-left:-2px;"></i></label>
+                            <label class="icon" for="email"><i class="icon-envelope" style="margin-left:-2px;"></i></label>
                             <input type="email" id='email' name="email" placeholder="example@email.com" required/>
                             <!--<input type="email" id='email' name="email" onkeyup="checkEmail()" placeholder="example@email.com" required/>-->
                             <div class="checkMessages" id="chkEmailMsg">
@@ -42,7 +43,7 @@
                         </div>
 
                         <div id="nickNameDiv">
-                            <label id="icon" for="nickName"><i class="icon-user"></i></label>
+                            <label class="icon" for="nickName"><i class="icon-user"></i></label>
                             <input type="text" id="nickName" name="nickName" onkeyup="checkNickName()" placeholder="닉네임" required/>
                             <div class="checkMessages" id="chkNickMsg">
                                 <p></p>
@@ -50,30 +51,31 @@
                         </div>
 
                         <div id="passwordDiv">
-                            <label id="icon" for="password"><i class="icon-shield"></i></label>
-                            <input type="password" id="password" name="password" onkeyup="checkPassword()" placeholder="비밀번호" required/>
+                            <label class="icon" for="password"><i class="icon-shield"></i></label>
+                            <!--<input type="password" id="password" name="password" onkeyup="checkPassword()" placeholder="비밀번호" required/>-->
+                            <input type="password" id="password" name="password" placeholder="비밀번호" required/>
                             <div class="checkMessages">
                             </div>
                         </div>
 
                         <div id="pwConfirmDiv">
-                            <label id="icon" for="pwConfirm"><i class="icon-shield"></i></label>
-                            <input type="password" id="pwConfirm" name="pwConfirm" onkeyup="confirmPassword()" placeholder="비밀번호 확인" required/>
+                            <label class="icon" for="pwConfirm"><i class="icon-shield"></i></label>
+                            <input type="password" id="pwConfirm" name="pwConfirm" placeholder="비밀번호 확인" required/>
                             <div class="checkMessages" id="chkPwMsg">
                                 <p></p>
                             </div>
                         </div>
 
                         <div id="messageFlagDiv">
-                            <input type="radio" id="messageFlag1" name="messageFlag" value="1" checked="checked">
-                            <label for="messageFlag1" class="radioLable">메시지 수신</label>
-                            <input type="radio" id="messageFlag2" name="messageFlag" value="0">
-                            <label for="messageFlag2" class="radioLable">메시지 거부</label>
+                            <input type="radio" id="msgY" name="msgYn" value="Y" checked="checked">
+                            <label for="msgY" class="radioLable">메시지 수신</label>
+                            <input type="radio" id="msgN" name="msgYn" value="N">
+                            <label for="msgN" class="radioLable">메시지 거부</label>
                         </div>
 
                         <div id='messageIdDiv'>
-                            <label id="icon" for='messageId'><i class="icon-user"></i></label>
-                            <input type='text' id='messageId' name='messageId' placeholder="카카오톡 ID">
+                            <label class="icon" for='msgId'><i class="icon-user"></i></label>
+                            <input type='text' id='msgId' name='msgId' placeholder="카카오톡 ID">
                             <div class="checkMessages" id="chkMessageId">
                                 <p></p>
                             </div>
@@ -90,7 +92,7 @@
                         <h3 style="margin-top:10px;">아티스트 정보</h3>
 
                         <div id="artistNameDiv" class="artistNameDiv">
-                            <label id="icon" for='artistName'><i class="icon-male"></i></label>
+                            <label class="icon" for='artistName'><i class="icon-male"></i></label>
                             <input id='artistName' type='text' name='artist.artistName' value="" placeholder="아티스트/팀명">
                             <div class="checkMessages" id="chkArtistName">
                                 <p></p>
@@ -98,7 +100,7 @@
                         </div>
 
                         <div id="artistMemberDiv" class="artistMemberDiv">
-                            <label id="icon" for='artistMember'><i class="icon-male"></i></label>
+                            <label class="icon" for='artistMember'><i class="icon-male"></i></label>
                             <input id='artistMember' type='text' name='artist.artistMember'
                                    value="" placeholder="팀 구성원">
                             <div class="checkMessages" id="chkArtistMember">
@@ -107,7 +109,7 @@
                         </div>
 
                         <div id="joinDateDiv" class="joinDateDiv">
-                            <label id="icon" for='joinDate'><i class="icon-male"></i></label>
+                            <label class="icon" for='joinDate'><i class="icon-male"></i></label>
                             <input id='joinDate' type='date' placeholder="팀 결성 날짜">
                             <div class="checkMessages" id="chkJoinDate">
                                 <p></p>
@@ -164,6 +166,7 @@
 
         </div>
         <button class="button" id="addBtn" type="button" style="text-align: center;">회원 가입</button>
+        </div>
     </div>
 </form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
