20200419 noticeList.html create

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <div class="main-nav" th:fragment="header">
         <!-- 로고 영역-->
-        <a href="/templates/index.html">
+        <a href="/">
             <img class="logo-img" src="/image/index-image/play-button.png">
         </a>
 
         <!-- 메뉴영역 -->
         <div class="nav-main">
-            <a href="/notice/list.html">공지사항</a>
+            <a href="/notice/list">공지사항</a>
             <a href="/performance/list.html">공연정보</a>
             <a href="/performance/form.html">공연등록</a>
             <a href="/performanceReview/list.html">공연리뷰</a>
