--- a/src/main/resources/templates/notice/noticeList.html
+++ b/src/main/resources/templates/notice/noticeList.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>공지 게시판</title>
+    <link rel='stylesheet' href='/js/lib/bootstrap-4.4.1/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/common/common.css'>
 </head>
 <body>
+<header th:replace="/fragments/header"></header>
+<div class='container'>
+    <div class="mt20"></div>
+    <h3>공지사항</h3>
+    <nav class="navbar navbar-light justify-content-between float-right">
+        <form class="form-inline">
+            <input id="words" name="words"
+                   class="form-control form-control-sm mr-sm-2" type="search"
+                   placeholder="검색" aria-label="Search">
+            <button id="searchBtn" class="btn btn-sm btn-outline-success my-2 my-sm-0"
+                    type="button">Search</button>
+        </form>
+    </nav>
+    <table class='table table-hover'>
+        <thead>
+            <tr>
+                <th>번호</th><th>제목</th><th>닉네임</th><th>조회수</th><th>등록일</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="notice : ${noticeList}">
+                <td th:text="${notice.noticeTitle}"></td>
+                <td th:text="${notice.noticeContents}"></td>
+                <td th:text="${notice.member.nickName}"></td>
+                <td th:text="${notice.viewCnt}"></td>
+                <td th:text="${#temporals.format(notice.regDt,'yyyy-MM-dd')}"></td>
+            </tr>
 
+        </tbody>
+    </table>
+    <div class="float-right">
+        <a href='/notice/form.html' class='btn btn-primary btn-sm'>추가</a>
+    </div>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a id="prevBtn" class="page-link" tabindex="-1">이전</a></li>
+
+            <li class="page-item">
+                <a id="currBtn" class="page-link" href="#">1</a></li>
+
+            <li class="page-item ">
+                <a id="nextBtn" class="page-link" tabindex="0">다음</a></li>
+        </ul>
+    </nav>
+</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
