--- a/src/main/resources/templates/notice/noticeView.html
+++ b/src/main/resources/templates/notice/noticeView.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>공지 작성</title>
+    <link rel='stylesheet' href='/js/lib/bootstrap-4.4.1/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/common/common.css'>
 </head>
 <body>
+<header th:replace="/fragments/header"></header>
+<div class='container'>
+    <h3>공지등록</h3>
+    <form>
+        <div class='form-group row'>
+            <label for='no' class='col-sm-2 col-form-label'>번호</label>
+            <div class='col-sm-10'>
+                <input class='form-control' readonly="readonly" id='no' name='no' th:value="${notice.id}">
+            </div>
+        </div>
 
+        <div class='form-group row'>
+            <label for='noticeTitle' class='col-sm-2 col-form-label'>공지제목</label>
+            <div class='col-sm-10'>
+                <input class='form-control' id='noticeTitle' type='text' name='noticeTitle' th:value="${notice.noticeTitle}">
+            </div>
+        </div>
+
+        <div class='form-group row'>
+            <label for='noticeDescription' class='col-sm-2 col-form-label'>공지내용</label>
+            <div class='col-sm-10'>
+                <input class='form-control' id='noticeDescription' type='text' name='noticeDescription' th:value="${notice.noticeContents}">
+            </div>
+        </div>
+
+        <div class='form-group row'>
+            <label for='noticeDate' class='col-sm-2 col-form-label'>등록일</label>
+            <div class='col-sm-10'>
+                <input class='form-control' readonly id='noticeDate' type='date' name='noticeDate' th:value="${#temporals.format(notice.regDt,'yyyy-MM-dd')}">
+            </div>
+        </div>
+
+        <div class='form-group row'>
+            <label for='viewCount' class='col-sm-2 col-form-label'>조회수</label>
+            <div class='col-sm-10'>
+                <input class='form-control' readonly id='viewCount' type='number' name='viewCount' th:value="${notice.viewCnt}">
+            </div>
+        </div>
+
+        <!-- <div class='form-group row'>
+        <label for='noticeDate' class='col-sm-2 col-form-label'>공지날짜</label>
+        <div class='col-sm-10'>
+        <input class='form-control' id='date' type='date' name='noticeDate'>
+        </div>
+        </div>  -->
+
+        <div class='form-group row'>
+            <div class='col-sm-10'>
+<!--                <button id="addBtn" type="button" class='btn btn-primary btn-sm my-new'>추가</button>-->
+                <button id="updateBtn" type="button" class='btn btn-primary btn-sm my-view'>변경</button>
+                <button id="deleteBtn" type="button" class='btn btn-primary btn-sm my-view'>삭제</button>
+            </div>
+        </div>
+    </form>
+
+    <footer>
+    </footer>
+</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
