--- a/src/main/resources/templates/notice/noticeList.html
+++ b/src/main/resources/templates/notice/noticeList.html
@@ -38,7 +38,7 @@
         </tbody>
     </table>
     <div class="float-right">
-        <a href='/notice/form.html' class='btn btn-primary btn-sm'>추가</a>
+        <a href='/notice/form' class='btn btn-primary btn-sm'>추가</a>
     </div>
 
     <nav aria-label="Page navigation">
