--- a/src/main/resources/templates/notice/noticeView.html
+++ b/src/main/resources/templates/notice/noticeView.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>공지 작성</title>
+    <title>공지 상세보기</title>
     <link rel='stylesheet' href='/js/lib/bootstrap-4.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/css/common/common.css'>
 </head>
 <body>
 <header th:replace="/fragments/header"></header>
 <div class='container'>
-    <h3>공지등록</h3>
+    <h3>공지보기</h3>
     <form>
         <div class='form-group row'>
             <label for='no' class='col-sm-2 col-form-label'>번호</label>
@@ -35,14 +35,14 @@
         <div class='form-group row'>
             <label for='noticeDate' class='col-sm-2 col-form-label'>등록일</label>
             <div class='col-sm-10'>
-                <input class='form-control' readonly id='noticeDate' type='date' name='noticeDate' th:value="${#temporals.format(notice.regDt,'yyyy-MM-dd')}">
+                <input class='form-control' readonly="readonly" id='noticeDate' type='date' name='noticeDate' th:value="${#temporals.format(notice.regDt,'yyyy-MM-dd')}">
             </div>
         </div>
 
         <div class='form-group row'>
             <label for='viewCount' class='col-sm-2 col-form-label'>조회수</label>
             <div class='col-sm-10'>
-                <input class='form-control' readonly id='viewCount' type='number' name='viewCount' th:value="${notice.viewCnt}">
+                <input class='form-control' readonly="readonly" id='viewCount' type='number' name='viewCount' th:value="${notice.viewCnt}">
             </div>
         </div>
 
