--- a/src/main/resources/templates/performance/performanceForm.html
+++ b/src/main/resources/templates/performance/performanceForm.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-
     <title>공연정보</title>
-
+    <link rel='stylesheet' href='/js/lib/bootstrap-4.4.1/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/common/common.css'>
+    <!--
     <link rel='stylesheet' href='../../node_modules/bootstrap/dist/css/bootstrap.min.css'>
     <link rel='stylesheet' href='../../css/style1.css'>
-
-    <link rel="stylesheet" href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
+    -->
+<!--    <link rel="stylesheet" href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">-->
 
 
 
