--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
         <!-- 메뉴영역 -->
         <div class="nav-main">
             <a href="/notice/list">공지사항</a>
-            <a href="/performance/list.html">공연정보</a>
+            <a href="/performance/list">공연정보</a>
             <a href="/performance/form.html">공연등록</a>
             <a href="/performanceReview/list.html">공연리뷰</a>
             <a href="/request/form.html">공연요청</a>
