20200501 Performance 수정진행중

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
         <div class="nav-main">
             <a href="/notice/list">공지사항</a>
             <a href="/performance/list">공연정보</a>
-            <a href="/performance/form.html">공연등록</a>
+            <a href="/performance/form">공연등록</a>
             <a href="/performanceReview/list.html">공연리뷰</a>
             <a href="/request/form.html">공연요청</a>
             <a href="/grape/list.html">후원하기</a>
