--- a/src/main/resources/templates/fragments/adminSidebar.html
+++ b/src/main/resources/templates/fragments/adminSidebar.html
@@ -100,6 +100,12 @@
             <span>멤버 리스트</span></a>
     </li>
 
+    <li class="nav-item">
+        <a class="nav-link" href="/admin/code/list">
+            <i class="fas fa-fw fa-table"></i>
+            <span>코드관리</span></a>
+    </li>
+
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
 
